# Save-app-android

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  agent.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.claude/: settings.local.json
.well-known/: funding-manifest-urls  funding.json
analytics/: README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
app/: build.gradle  build.gradle.kts  detekt-baseline.xml  google-services-fdroid.json  google-services.json  proguard-rules.pro
config/: baseline.xml  detekt-config.yml
docs/: CAMERA_RESULT_PASSING_IMPLEMENTATION.md  COMPOSE_OPTIMIZATION_SUMMARY.md  CONTENT_PICKER_INTEGRATION_SUMMARY.md  CREDENTIAL_SECURITY_ALTERNATIVES.md  DWEB_DATABASE_ANALYSIS.md  DWEB_INTEGRATION_PLAN.md  HOMESCREEN_IMPROVEMENTS.md  IMPLEMENTATION_IMPROVEMENTS_SUMMARY.md  MAINMEDIA_MIGRATION_GUIDE.md  SnowbirdLifecycle.md  UPLOAD_MANAGER_COMPOSE_MIGRATION.md  UPLOAD_PERFORMANCE_ISSUE_2026-02-18.md  UPLOAD_RESUME_AND_PROGRESS.md  VAULT_ARCHITECTURE_UNIFICATION.md  VAULT_CREDENTIAL_SECURITY_PLAN.md  android-progress-report.md  app-masking-feature-action-plan.md  camera-implementation.md  compose-media-list-optimization.md  dweb-backend-table-structure.md  entry-decorator-navigation3.md  main-compose-migration-plan.md  mainactivity-notes.md  mainactivity-requirement.md  navigation3-analytics-session-tracking.md  navigation3-migration-guide.md  (+6 more)
rust-c2pa-ffi/: Cargo.toml  build-android.sh
rust-c2pa-ffi/.cargo/: config.toml  config.toml.template
rust-c2pa-ffi/src/: lib.rs
(+787 files in other folders)
